CS-959: CS-3725: Fixed help window height not fitting contents and losing bottom of file icons

--- a/assets/css/pluginadmin.css
+++ b/assets/css/pluginadmin.css
@@ -38,7 +38,6 @@ div#certificate-help-window {
 	border-radius: 8px;
 	width: 500px;
 	max-width: 500px;
-	max-height: 800px;
 	background-color: white;
 	position: absolute;
 	z-index: 99999;
